# brave-core

./: DEPS  PRESUBMIT.py  package-lock.json  package.json
android/: android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni
app/: brave_main_delegate.cc  brave_settings_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/android/: brave_shields_content_settings.cc
browser/brave_ads/: ads_service_impl.cc  ads_service_impl.h  ads_tab_helper.cc  ads_tab_helper.h  search_ad_metadata_browsertest.cc  search_ad_metadata_handler.cc  sources.gni
browser/brave_shields/: ad_block_service_browsertest.cc  brave_shields_web_contents_observer.cc  brave_shields_web_contents_observer.h  brave_timestamp_rounding_browsertest.cc  eventsource_pool_limit_browsertest.cc  https_upgrade_browsertest.cc  websockets_pool_limit_browsertest.cc
browser/brave_wallet/: brave_wallet_provider_delegate_impl.cc  brave_wallet_provider_delegate_impl.h  brave_wallet_provider_impl_unittest.cc  brave_wallet_service_delegate_impl.cc  brave_wallet_service_delegate_impl.h  brave_wallet_tab_helper.cc  ethereum_provider_impl_unittest.cc  send_transaction_browsertest.cc
browser/farbling/: BUILD.gn  brave_enumeratedevices_farbling_browsertest.cc  brave_navigator_devicememory_farbling_browsertest.cc  brave_navigator_hardwareconcurrency_farbling_browsertest.cc  brave_navigator_keyboard_api_browsertest.cc  brave_navigator_plugins_farbling_browsertest.cc  brave_navigator_usb_farbling_browsertest.cc  brave_screen_farbling_browsertest.cc  brave_speech_synthesis_farbling_browsertest.cc  brave_webaudio_farbling_browsertest.cc  brave_webgl_farbling_browsertest.cc
browser/net/: BUILD.gn  brave_reduce_language_network_delegate_helper.cc  url_context.cc
browser/permissions/: permission_manager_browsertest.cc
browser/profiles/: BUILD.gn  brave_profile_manager.cc  profile_util.cc  profile_util.h
browser/tor/: BUILD.gn  brave_tor_browsertest.cc  tor_profile_manager.cc
browser/ui/: BUILD.gn  (+2 more)
browser/webcompat_exceptions/: BUILD.gn  webcompat_exceptions_keyed_service_factory.cc  webcompat_exceptions_keyed_service_factory.h
components/webcompat/core/browser/: BUILD.gn  webcompat_exceptions_observer.h  webcompat_exceptions_service.cc  webcompat_exceptions_service.h  webcompat_settings_cleaner.cc  webcompat_settings_cleaner.h  webcompat_settings_cleaning_service.cc  webcompat_settings_cleaning_service.h
components/webcompat_exceptions/browser/: BUILD.gn  webcompat_constants.h  webcompat_exceptions.mojom  webcompat_exceptions_bridge.cc  webcompat_exceptions_bridge.h  webcompat_exceptions_service.cc  webcompat_exceptions_service.h
components/webcompat_exceptions/common/: BUILD.gn  webcompat_exceptions.mojom
patches/: chrome-VERSION.patch  chrome-browser-BUILD.gn.patch  chrome-browser-content_settings-generated_notification_pref_unittest.cc.patch  components-content_settings-core-browser-host_content_settings_map.cc.patch  components-content_settings-core-common-content_settings_enums.mojom.patch  components-content_settings-core-common-content_settings_types.mojom.patch  third_party-blink-renderer-core-frame-screen.cc.patch
test/: BUILD.gn
(+222 files in other folders)
