# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//brave/build/config.gni")

source_set("core") {
  sources = [
    "webcompat_exceptions_keyed_service_factory.cc",
    "webcompat_exceptions_keyed_service_factory.h",
  ]

  deps = [
    "//base",
    "//components/content_settings/core/browser",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
  ]
}