# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//mojo/public/tools/bindings/mojom.gni")

static_library("browser") {
  sources = [
    "webcompat_exceptions_service.cc",
    "webcompat_exceptions_service.h",
    "webcompat_exceptions_bridge.cc",
    "webcompat_exceptions_bridge.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_component_updater/browser",
    "//brave/components/webcompat_exceptions/browser:mojom",
  ]
}

mojom("mojom") {
  sources = [ "webcompat_exceptions.mojom" ]

  deps = [
    "//mojo/public/mojom/base",
    "//url/mojom:url_mojom_gurl",
  ]
}
