# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")

source_set("browser") {
  sources = [
    "webcompat_settings_cleaner.cc",
    "webcompat_settings_cleaner.h",
  ]

  deps = [ "//base" ]
}
